<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:title="@string/side_nave_home_title"
            android:icon="@drawable/home_24px"
            android:checked="true"
            />

        <item
            android:title="@string/side_nav_profile_title"
            android:icon="@drawable/account_circle_24px"/>
        <item
            android:title="@string/side_nav_order_title"
            android:icon="@drawable/orders_24px"/>
        <item
            android:title="@string/side_nav_wishlist_title"
            android:icon="@drawable/favorite_24px"/>
        <item
            android:title="@string/side_nav_cart_title"
            android:icon="@drawable/shopping_cart_24px"/>
        <item
            android:title="@string/side_nav_message_title"
            android:icon="@drawable/mail_24px"/>
        <item
            android:title="@string/side_nav_settings_title"
            android:icon="@drawable/settings_24px"/>
    </group>

    <group>
        <item android:title="@string/side_nav_login_title" android:icon="@drawable/login_24px" />
        <item android:title="@string/side_nav_logOut_title"
            android:icon="@drawable/logout_24px"
           />
    </group>

</menu>